--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,6 +12,16 @@
                 "kind": "build",
                 "isDefault": true
             }
+        },
+        {
+            "label": "example2_HelloWorld",
+            "type": "shell",
+            "command": "cd example2_HelloWorld && python3 build_and_test.py",
+            "problemMatcher": [],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ]
 }
